rust/examples/errors/div-by-zero-hard-coded/src/main.rs
fn main() {
    let a = 8;
    let b = 2;
    let c = 0;
    let x = a / b;
    println!("{x}");

    let y = a / c;
    println!("{y}");
}


